--- a/public/stylesheets/sass/_utils.sass
+++ b/public/stylesheets/sass/_utils.sass
@@ -23,6 +23,9 @@
 /*
  *  Font Stuff
  */
+.large
+  font-size: 20px
+  font-size: 2.0rem
 .normal-size
   font-size: 17px
   font-size: 1.7rem
@@ -32,159 +35,66 @@
 .small
   font-size: 11px
   font-size: 1.1rem
-.mute
-  color: #777
-  a
-    color: #777
-  .dark
-    color: #444
-.dark
-  color: #222
 .bold
   font-weight: bold
 .uppercase
   text-transform: uppercase
-
 .no-underline
   text-decoration: none
   &:hover
     text-decoration: none
 
-.color-green
-  color: $green
-a.color-green:hover
-  color: darken($green, 15%)
-.color-light-green
-  color: $light_green
-a.color-light-green:hover
-  color: darken($light_green, 15%)
-.color-red
-  color: $red
-a.color-red:hover
-  color: darken($red, 15%)
-
-/*
- *  Borders
- */
-.dark-border-bottom
-  border-bottom: 1px solid $gray
-.light-border-bottom
-  border-bottom: 1px solid $light_gray
-.dark-border-top
-  border-top: 1px solid $gray
-.light-border-top
-  border-top: 1px solid $light_gray
-
 /*
  *  Display
  */
-.make-block
+.block
   display: block
-.make-inline
+.inline
   display: inline
-.make-inline-block
+.inline-block
   display: inline-block
 
-.width-25
-  width: 25%
-.width-49
-  width: 49%
-.width-50
-  width: 50%
-.width-75
-  width: 75%
+
+// Width helpers
+// .width-0 - .width-100
+@for $i from 0 through 100
+  .width-#{$i}
+    width: $i * 1%
+  .max-width-#{$i}
+    max-width: $i * 1%
+
+// Margin and padding helpers
+.padding-0
+  padding: 0px !important
+.margin-0
+  margin: 0px !important
+.full-bleed
+  margin-right: -20px !important
+  margin-left: -20px !important
+// .margin-top-10, .padding-left-5, etc.
+@each $type in margin, padding
+  @each $side in top, right, bottom, left
+    @for $i from 0 through 100
+      .#{$type}-#{$side}-#{$i}
+        #{$type}-#{$side}: $i * 1px !important
+
+// Negative margin helpers
+// .negative-margin-top-10, .negative-margin-right-5, etc.
+@each $side in top, right, bottom, left
+  @for $i from 0 through 100
+    .negative-margin-#{$side}-#{$i}
+      margin-#{$side}: -$i * 1px !important
 
 /*
  *  Text alignment
  */
-.align-left
+.text-left
   text-align: left
-.align-center
+.text-center
   text-align: center
-.align-right
+.text-right
   text-align: right
 
-/*
- *  Gutters
- */
-.gutter-top
-  margin-top: 20px
-.gutter-top-three-quarter
-  margin-top: 15px
-.gutter-top-half
-  margin-top: 10px
-.gutter-top-quarter
-  margin-top: 5px
-.gutter-top-none
-  margin-top: 0px
-.gutter-top-double
-  margin-top: 40px
-.gutter-top-negative
-  margin-top: -20px !important
-
-.gutter-right
-  margin-right: 20px
-.gutter-right-three-quarter
-  margin-right: 15px
-.gutter-right-half
-  margin-right: 10px
-.gutter-right-quarter
-  margin-right: 5px
-.gutter-right-none
-  margin-right: 0px
-.gutter-right-double
-  margin-right: 40px
-.gutter-right-negative
-  margin-right: -20px !important
-
-.gutter-bottom
-  margin-bottom: 20px
-.gutter-bottom-three-quarter
-  margin-bottom: 15px
-.gutter-bottom-half
-  margin-bottom: 10px
-.gutter-bottom-quarter
-  margin-bottom: 5px
-.gutter-bottom-none
-  margin-bottom: 0px !important
-.gutter-bottom-double
-  margin-bottom: 40px
-.gutter-bottom-negative
-  margin-bottom: -20px !important
-
-.gutter-left
-  margin-left: 20px
-.gutter-left-three-quarter
-  margin-left: 15px
-.gutter-left-half
-  margin-left: 10px
-.gutter-left-quarter
-  margin-left: 5px
-.gutter-left-none
-  margin-left: 0px
-.gutter-left-double
-  margin-left: 40px
-.gutter-left-negative
-  margin-left: -20px !important
-
-/*
- * Boxes
- */
-.padded-box
-  +box-sizing(border-box)
-  padding: 15px
-.gray-box
-  background: $off_white
-
-/*
- * Keyframes Mixin
- */
-=keyframes($name)
-  @-webkit-keyframes #{$name}
-    @content
-  @-moz-keyframes #{$name}
-    @content
-  @-ms-keyframes #{$name}
-    @content
-  @keyframes #{$name}
-    @content
+.centered
+  display: block
+  margin: 0px auto
