--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -7,5 +7,76 @@ html, body
   height: 100%
 
 body
-  background: #fff
+  background: #222 url('/images/dark_wall.png') repeat
   font-family: 'Helvetica Neue', Arial, sans-serif
+  p, h1, h2, h3, h4, h5, h6
+    color: #eee
+  p
+    font-size: 16px
+    font-size: 1.6rem
+  .framed
+    +box-sizing(border-box)
+    border-top: 5px solid #555
+
+  h1.section-header
+    font-weight: bold
+    border-bottom: 1px solid #777
+
+  a.facebook
+    font-family: 'lucida grande', sans-serif
+    font-weight: bold
+    font-size: 25px
+    font-size: 2.5rem
+    display: block
+    padding: 15px
+    text-align: center
+    color: #fff
+    background: #3B5998
+    &:hover
+      background: darken(#3B5998, 15%)
+
+  #main
+    margin: 0px auto 50px
+    max-width: 960px
+
+  #global-header
+    margin: 0px auto
+    max-width: 960px
+    img
+      height: 100px
+      position: relative
+      top: 20px
+    h1
+      color: #fff
+      text-shadow: 2px 2px 0px rgba(0, 0, 0, 1)
+      font-family: 'Condiment', cursive
+      font-size: 80px
+      font-size: 8.0rem
+    nav
+      padding: 20px 0px
+      margin: 0px auto
+      border-top: 1px solid #555
+      border-bottom: 1px solid #555
+      border-color: rgba(255, 255, 255, 0.25)
+      ul
+        margin: 0px
+        width: 100%
+        text-align: center
+        li
+          margin-bottom: 0px
+          display: inline-block
+          margin-right: 10px
+          &:last-child
+            margin-right: 0px
+          a
+            color: #BD3C3D
+            font-size: 20px
+            font-size: 2.0rem
+            &:hover
+              color: darken(#BD3C3D, 15%)
+            &.current
+              color: #fff
+              font-weight: bold
+              &:hover
+                color: #fff
+
