--- a/views/index.haml
+++ b/views/index.haml
@@ -1,1 +1,28 @@
-%h2 Daniel Thorp
+.row
+  .six.columns.margin-bottom-20
+    %h1.section-header About Dan
+    %p.margin-bottom-20
+      From Wikipedia, the free encyclopedia - Daniel Thomas Thorp Jr. (born
+      December 17, 1979) is an American born actor from West Virginia. He has
+      worked along side of many greats including SJ Smith, T. Newen, L. Smith,
+      TL McKoy, and the list goes on.
+
+    %h1.section-header News
+    #fb-wall
+
+  .six.columns
+    = link_to "facebook", "http://www.facebook.com/ActorDanThorp", class: "facebook margin-bottom-20"
+    = image_tag "/images/headshot_cropped.png", alt: "Headshot", class: "margin-bottom-0 block"
+    = image_tag "/images/foolforlove_cropped.png", alt: "Headshot", class: "margin-bottom-0 block"
+    = image_tag "/images/skippy.png", alt: "Headshot", class: "margin-bottom-0 block"
+
+
+:javascript
+  $('#fb-wall').fbWall({
+    id: 'ActorDanThorp',
+    accessToken:'something',
+    showGuestEntries:false,
+    showComments:false,
+    max:5,
+    timeConversion:12
+  });
