--- a/public/stylesheets/sass/_utils.sass
+++ b/public/stylesheets/sass/_utils.sass
@@ -48,11 +48,11 @@
  *  Display
  */
 .block
-  display: block
+  display: block !important
 .inline
-  display: inline
+  display: inline !important
 .inline-block
-  display: inline-block
+  display: inline-block !important
 
 
 // Width helpers
