--- a/views/layout.haml
+++ b/views/layout.haml
@@ -11,10 +11,15 @@
     %link{href: 'http://fonts.googleapis.com/css?family=Condiment|Days+One', rel: 'stylesheet', type: 'text/css'}
 
   %body
-    #global-header.container.margin-top-40.margin-bottom-20
-      %h1.text-center.negative-margin-bottom-15
-        = image_tag "/images/circle_headshot.png"
-        Dan Thorp
+    #global-header.container.margin-top-20.margin-bottom-20
+      .show-on-desktops.hide-on-mobile
+        %h1.text-center.negative-margin-bottom-15
+          = image_tag "/images/circle_headshot.png"
+          Dan Thorp
+      .show-on-mobile.hide-on-desktops
+        %h1.text-center.negative-margin-bottom-15.padding-left-0
+          = image_tag "/images/circle_headshot.png"
+          Dan T.
       %nav
         %ul
           %li= link_to "Home", "/", class: "#{@action == 'home' ? 'current' : ''}"
