--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -4389,9 +4389,7 @@ body {
     body #global-header nav {
       padding: 20px 0px;
       margin: 0px auto;
-      border-top: 1px solid #555555;
-      border-bottom: 1px solid #555555;
-      border-color: rgba(255, 255, 255, 0.25); }
+      border-bottom: 1px solid #333333; }
       body #global-header nav ul {
         margin: 0px;
         width: 100%;
