--- a/views/index.haml
+++ b/views/index.haml
@@ -15,7 +15,7 @@
       .six.columns
         = link_to "facebook", "http://www.facebook.com/ActorDanThorp", class: "facebook"
       .six.columns
-        = link_to "twitter", "http://www.twitter.com/danthorp2012", class: "twitter"
+        = link_to "twitter", "http://www.twitter.com/danielthorpjr", class: "twitter"
     = image_tag "/images/headshot_cropped.png", alt: "Headshot", class: "margin-bottom-0 block"
     = image_tag "/images/foolforlove_cropped.png", alt: "Headshot", class: "margin-bottom-0 block"
     = image_tag "/images/skippy.png", alt: "Headshot", class: "margin-bottom-0 block"
