--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -22,9 +22,9 @@ body
     font-size: 30px
     font-size: 3.0rem
     font-weight: bold
-    color: #777
-    font-style: italic
+    color: #ccc
     border-bottom: 1px solid #777
+    padding-bottom: 5px
 
   a.facebook, a.twitter, a.photo-block
     font-family: 'lucida grande', sans-serif
