--- a/views/reel.haml
+++ b/views/reel.haml
@@ -1,4 +1,10 @@
 .row.margin-bottom-20
+  .six-columns
+    %iframe{width: "459", height: "257", src: "https://www.youtube.com/embed/JA_27--bIRo", frameborder: "0", allowFullScreen: true}
+  .six.columns
+    %iframe{width: "459", height: "257", src: "http://www.youtube.com/embed/gigJSVKS-rg", frameborder: "0", allowFullScreen: true}
+
+.row.margin-bottom-20
   .six.columns
     %iframe{width: "459", height: "257", src: "http://www.youtube.com/embed/mEoaP7gQEaY", frameborder: "0", allowFullScreen: true}
   .six.columns
@@ -13,5 +19,3 @@
 .row.margin-bottom-20
   .six.columns
     %iframe{width: "459", height: "257", src: "http://www.youtube.com/embed/uP4UtYMm9pc", frameborder: "0", allowFullScreen: true}
-  .six.columns
-    %iframe{width: "459", height: "257", src: "http://www.youtube.com/embed/gigJSVKS-rg", frameborder: "0", allowFullScreen: true}
