--- a/views/reel.haml
+++ b/views/reel.haml
@@ -1,5 +1,5 @@
 .row.margin-bottom-20
-  .six-columns
+  .six.columns
     %iframe{width: "459", height: "257", src: "https://www.youtube.com/embed/JA_27--bIRo", frameborder: "0", allowFullScreen: true}
   .six.columns
     %iframe{width: "459", height: "257", src: "http://www.youtube.com/embed/gigJSVKS-rg", frameborder: "0", allowFullScreen: true}
